--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,15 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>MY APP</title>
+    <title>walp.nodesite</title>
 </head>
     <body>
-        May Node and Express be with you.
+
+        <h3>submit a note:</h3>
 
         <form action="/note" method="POST">
             <input type="text" placeholder="subject" name="subject">
             <input type="text" placeholder="text" name="body">
             <button type="submit">Submit</button>
         </form>
+
+        <h3>submitted notes:</h3>
+
+        <ul class="notes">
+          <% for(var i = 0; i < notes.length; i++) {%>
+            <li class="note">
+              <span><%= notes[i].subject %></span>
+              <span>:&nbsp;</span>
+              <span><%= notes[i].body %></span>
+            </li>
+          <% } %>
+        </ul>
+
     </body>
 </html>
